[package]
name = "toki-aqm"
version = "0.1.0"
authors = ["eshin"]
edition = "2018"

[dependencies]
embedded-ccs811 = "0.2.0"
rppal = { version = "0.11.3", features = ["hal"] }
embedded-hal = "0.2.4"
nb = "1.0.0"
ssd1306 = "0.5.1"
embedded-graphics = "0.6.2"
bme280 = "0.2.1"
linux-embedded-hal = "0.3.0"
